# Eternize

./: .gitignore  Cargo.toml  Makefile.toml  README.md
eternize-models/: Cargo.toml
eternize-models/src/: album.rs  customize_page.rs  gift.rs  glass.rs  hero.rs  lib.rs  section.rs  signature.rs  timeline.rs  user.rs  utils.rs
eternize-page/: Cargo.toml  wrangler.example.toml  wrangler.toml
eternize-page/src/: lib.rs
eternize-page/templates/sections/: glass.html  timeline.html
eternize-render/: Cargo.toml
eternize-render/src/: lib.rs
eternize-render/src/pages/: customize.rs  main.rs  mod.rs  not_found.rs
eternize-render/src/sections/: album.rs  gift.rs  glass.rs  hero.rs  mod.rs  timeline.rs
eternize-render/templates/: index.html  not_found.html
eternize-render/templates/customize/: index.html
eternize-render/templates/customize/sections/: album.html  gift.html  glass.html  hero.html  timeline.html
eternize-render/templates/sections/: album.html  gala.html  gift.html  glass.html  hero.html  timeline.html  vault.html
eternize-repository/: Cargo.toml
eternize-repository/src/: lib.rs
eternize-repository/src/d1/: mod.rs  page.rs  section.rs  signature.rs  user.rs
eternize-services/: Cargo.toml
eternize-services/src/: lib.rs  utils.rs
eternize-services/src/database/: page.rs
migrations/: 01_create_tables.sql  02_insert_plan_and_user.sql  03_insert_exemple_page.sql
