[workspace]
resolver = '2'
members = ["eternize-models","eternize-page", "eternize-render"]

[workspace.dependencies]
worker = { version = "0.8", features = ['d1'] }
worker-macros = { version = "0.8" }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
eternize-render = { path = "./eternize-render/" }
eternize-models = { path = "./eternize-models/" }
