[package]
name = "eternize-page"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono.workspace = true
eternize-models.workspace = true
eternize-render.workspace = true
eternize-repository.workspace = true
eternize-services.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
worker.workspace = true
worker-macros.workspace = true
